<resources>
    <string name="app_name">Africogram</string>
    <string name="app_name_label">Africogram</string>
    <string name="main_app_header_text">The exclusive african network</string>
    <string name="africa_map">africa map</string>
    <string name="about_app1_text">Connect with africans nearby and around the world.</string>
    <string name="about_app2_text">Keep in touch via direct message, voice call and video chat!</string>
    <string name="about_app3_text">Share your status updates with friends and family from Africa!</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="africogram_helps_you_head_text">Africogram helps you:</string>
    <string name="terms_of_service_menu_text">Terms of service</string>
    <string name="privacy_menu_text">Privacy</string>
    <string name="share_app_menu_text">Share App</string>
    <string name="package_name_text" translatable="false">com.africogram.www</string>
    <string name="choose_photo_from_text">Choose a photo from:</string>
    <string name="app_store_link" translatable="false">https://www</string>
    <string name="about_app_share_1">Africogram helps you connect with africans living nearby and around the world!</string>
    <string name="about_app_share2">Click the link below to learn more about it:</string>
    <string name="share_app_via_text">Share Africogram via:</string>
    <string name="terms_service_link" translatable="false">https://www.africogram.com/about/terms</string>
    <string name="privacy_policy_link" translatable="false">https://www.africogram.com/about/privacy</string>
    <string name="forgot_your_password_text">Forgot your password?</string>
    <string name="password_edit_text">Password</string>
    <string name="email_edit_text">Email</string>
    <string name="sign_in_to_africogram_header_text">Sign in to Africogram</string>
    <string name="semi_head_login_more_info">Enter your email and password</string>
    <string name="sign_in_fragment_label">Sign In</string>
    <string name="sign_up_fragment_label">Sign Up</string>
    <string name="sign_up_for_africogram_head_text">Sign up for Africogram</string>
    <string name="first_name_edt_text">First name</string>
    <string name="last_name_edt_text">Last name</string>
    <string name="birthday_edt_text">Day</string>
    <string name="birth_year_edt_text">Year</string>
    <string name="birth_month_edt_text">Month</string>
    <string name="birthday_text">Birthday</string>
    <string name="female_gender_text">Female</string>
    <string name="male_gender_text">Male</string>
    <string name="gender_text">Gender</string>
    <string name="terms_privacy_tv_text">I agree to terms and privacy policy</string>
    <string name="empty_name_error_text">Your name?</string>
    <string name="invalid_name_error_text">Your real name?</string>
    <string name="too_short_name_error_text">Too short!</string>
    <string name="empty_email_error">Your email?</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="empty_password_error">Your password?</string>
    <string name="password_too_short_error">Too short!</string>
    <string name="day_number_error">Day?</string>
    <string name="empty_month_error">Month?</string>
    <string name="empty_day_error">Day?</string>
    <string name="empty_year_error">Year?</string>
    <string name="under_13_age_error">Age under 13!</string>
    <string name="invalid_year_error">Invalid year</string>
    <string name="invalid_month_error">Invalid month</string>
    <string name="invalid_day_error">Invalid day</string>
    <string name="not_selected_gender_error">Your gender?</string>
    <string name="agree_terms_privacy_error">You must agree to terms and privacy</string>
    <string name="enter_user_email_error_text">Your email?</string>
    <string name="invalid_email_format_error_text">Invalid email</string>
    <string name="enter_user_password_error_text">Your password?</string>
    <string name="no_internet_connection_text">No internet connection</string>
    <string name="email_not_found_for_user_error">This email does not exist in our system</string>
    <string name="incorrect_password_error">Incorrect password</string>
    <string name="account_disabled_text">Your account has been disabled</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="reset_button_text">Reset</string>
    <string name="reset_password_title_text">Reset password</string>
    <string name="reset_password_message_text">We sent you an email with a link \n to reset your password.</string>
    <string name="verification_code_is_text">Your verification code is</string>
    <string name="verify_account_text">Verify your account</string>
    <string name="verify_account_message_text">We sent you a 5-digit code by email to verify your account.</string>
    <string name="verify_account_button_text">Verify account</string>
    <string name="verification_account_extra_text">If you did not request this code, you can simply ignore this email.</string>
    <string name="enter_code_edit_text">Enter code</string>
    <string name="incorrect_verification_code">Incorrect code!</string>
    <string name="verification_code_dialog_title">Verification code</string>
    <string name="verify_button_text">Verify</string>
    <string name="settings_menu_text">Settings</string>
    <string name="sign_out_menu_text">Sign out</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="feedback_menu_text">Feedback</string>
    <string name="report_problem_menu_text">Report a Problem</string>
    <string name="invite_friends_menu_text">Invite Friends</string>
    <string name="submit_button_text">Submit</string>
    <string name="feedback_hint_edt_text">Write your feedback</string>
    <string name="feedback_fragment_head_text">Help us improve Africogram</string>
</resources>