<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="SignInViewModel"
            type="com.africogram.www.viewmodels.SignInViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_app_color"
        tools:context=".ui.fragments.SignInFragment">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/sign_in_left_margin"
            android:paddingLeft="@dimen/sign_in_left_margin"
            android:paddingEnd="@dimen/sign_in_right_margin"
            android:paddingRight="@dimen/sign_in_right_margin"
            android:paddingBottom="16dp"
            tools:context=".ui.fragments.SignInFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/semiHead2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@color/white"
                        android:fontFamily="@font/lato_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/sign_in_to_africogram_header_text"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@color/sign_in_layout_semi_head_bg_color"
                        android:fontFamily="@font/lato_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/semi_head_login_more_info"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="normal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_bg_app_color">

                <!-- Email -->
                <EditText
                    android:id="@+id/email_edt"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="none"
                    android:background="@color/white"
                    android:hint="@string/email_edit_text"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Password -->
                <EditText
                    android:id="@+id/password_edt"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="none"
                    android:background="@color/white"
                    android:hint="@string/password_edit_text"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toBottomOf="@id/email_edt" />

                <!-- sign in button -->
                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/signInButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_round_colored"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_edt"
                    app:mrl_rippleColor="@color/colorPrimaryDark"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true"
                    app:mrl_rippleRoundedCorners="20dp">

                    <Button
                        android:id="@+id/signInButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/sign_in_button_text"
                        android:textAllCaps="false"
                        android:textColor="@color/color_button_text"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <ProgressBar
                    android:id="@+id/loaderBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_edt" />

                <TextView
                    android:id="@+id/forgotPasswordTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/lato_medium"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/forgot_your_password_text"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/about_content_color"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signInButtonLayout" />

                <TextView
                    android:id="@+id/forgotPasswordMessageTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/white"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/lato_medium"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/reset_password_message_text"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/about_content_color"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_message_48"
                    app:layout_constraintTop_toBottomOf="@id/forgotPasswordTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>